--- a/app/components/movies/movies.component.html
+++ b/app/components/movies/movies.component.html
@@ -23,7 +23,7 @@
                         <img *ngIf="movie.poster_path" class="thumbnail" src="http://image.tmdb.org/t/p/w500/{{ movie.poster_path }}" />
                         <h4>{{ movie.title }}</h4>
                         <p>{{ movie.release_date}}</p>
-                        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        <p><a class="btn btn-default"  routerLink="/movie/{{movie.id}}">View details &raquo;</a></p>
                     </div>
                 </div>
             </div>
@@ -42,7 +42,7 @@
                     <img *ngIf="movie.poster_path" class="thumbnail" src="http://image.tmdb.org/t/p/w500/{{ movie.poster_path }}" />
                     <h4>{{ movie.title }}</h4>
                     <p>{{ movie.release_date}}</p>
-                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-default" routerLink="/movie/{{movie.id}}">View details &raquo;</a></p>
                 </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
                     <img *ngIf="movie.poster_path" class="thumbnail" src="http://image.tmdb.org/t/p/w500/{{ movie.poster_path }}" />
                     <h4>{{ movie.title }}</h4>
                     <p>{{ movie.release_date}}</p>
-                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-default" routerLink="/movie/{{movie.id}}">View details &raquo;</a></p>
                 </div>
             </div>
         </div>
